<resources>
    <string name="app_name">PhoneBook</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit</string>
    <string name="delete_contact">Delete</string>
    <string name="view_contact">View</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="enter_phone_number">Mobile Number</string>
    <string name="enter_home_number">Home Number</string>
    <string name="enter_work_number">Work Number</string>
    <string name="enter_main_number">Main Number</string>
    <string name="enter_email">"Email Address "</string>
    <string name="input_text_error_message">"Maximum character length is "</string>
    <string name="input_text_email_error_message">"Wrong email format "</string>
    <string name="permission_title">Read contacts access needed</string>
    <string name="permission_message">Please enable access to contacts.</string>
    <string name="permission_success">You have contacts permission</string>
    <string name="permission_unsuccessful">You have disabled contacts permission.</string>
    <string name="type_home">Home</string>
    <string name="type_mobile">Mobile</string>
    <string name="type_work">Work</string>
    <string name="type_main">Main</string>
    <string name="insert_success">Insert Successful </string>
    <string name="insert_failed">Insert Failed </string>
    <string name="show_success">Show Successful </string>
    <string name="show_failed">Show Failed </string>
    <string name="delete_success">Delete Successful </string>
    <string name="delete_failed">Delete Failed </string>
    <string name="update_success">Update Successful </string>
    <string name="update_failed">Update Failed </string>
    <string name="phone_numbers">Phone Numbers: </string>
    <string name="email">Emails: </string>
    <string name="valid_name">Enter a valid name </string>
    <string name="dummy_email">dummy@abv.bg</string>
    <string name="no_contacts_available">No contacts. \n Enable contact permissions!</string>



    <string-array name="different_number_types">

        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
        <item>Main</item>
    </string-array>

</resources>