<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android  ="http://schemas.android.com/apk/res/android"
        xmlns:app      ="http://schemas.android.com/apk/res-auto"
        xmlns:tools    ="http://schemas.android.com/tools">

    <data>
        <variable
            name  ="user"
            type  ="com.satanasov.phonebook.kotlinPhoneBook.model.ContactModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width    ="match_parent"
        android:layout_height   ="match_parent"
        tools:context           =".view.ContactsActivity">

        <include
            android:id                            ="@+id/contactsToolbar"
            layout                                ="@layout/toolbar_main"
            android:layout_width                  ="match_parent"
            android:layout_height                 ="wrap_content"
            app:layout_constraintTop_toTopOf      ="parent"
            app:layout_constraintStart_toStartOf  ="parent" />

        <ScrollView
            android:layout_width                ="match_parent"
            android:layout_height               ="wrap_content"
            android:fillViewport                ="true"
            android:paddingBottom               ="64dp"
            app:layout_constraintTop_toBottomOf ="@id/contactsToolbar">

        <LinearLayout
            android:id                              ="@+id/userNameLinearLayout"
            android:layout_width                    ="match_parent"
            android:layout_height                   ="wrap_content"
            app:layout_constraintTop_toBottomOf     ="@id/contactsToolbar"
            app:layout_constraintBottom_toBottomOf  ="parent"
            android:layout_marginTop                ="8dp"
            tools:context                           =".view.ContactsActivity"
            android:orientation                     ="vertical">

            <androidx.cardview.widget.CardView
                android:id                            ="@+id/contactCardView"
                android:layout_width                  ="100dp"
                android:layout_height                 ="100dp"
                android:innerRadius                   ="0dp"
                android:elevation                     ="10dp"
                android:shape                         ="ring"
                android:layout_gravity                ="center"
                android:layout_marginBottom           ="16dp"
                app:cardCornerRadius                  ="50dp"
                app:layout_constraintEnd_toEndOf      ="parent"
                app:layout_constraintStart_toStartOf  ="parent"
                app:layout_constraintTop_toBottomOf   ="@id/contactsToolbar">

                <ImageView
                    android:id             ="@+id/contactImageView"
                    android:layout_width   ="100dp"
                    android:layout_height  ="100dp" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width        ="match_parent"
                android:layout_height       ="2dp"
                android:background          ="@color/colorPrimaryDark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id                  ="@+id/inputLayoutFirstName"
                android:layout_width        ="match_parent"
                android:layout_height       ="0dp"
                android:layout_marginLeft   ="16dp"
                android:layout_marginRight  ="16dp"
                android:layout_marginTop    ="8dp"
                android:hint                ="@string/enter_first_name"
                android:layout_weight       ="1"
                app:counterMaxLength        ="20"
                app:errorEnabled            ="true"
                style                       ="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id              ="@+id/firstNameEditText"
                    android:layout_width    ="match_parent"
                    android:layout_height   ="wrap_content"
                    android:text            ='@{user.firstName}'
                    android:inputType       ="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id                  ="@+id/inputLayoutLastName"
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:layout_marginLeft   ="16dp"
                android:layout_marginRight  ="16dp"
                android:hint                ="@string/enter_last_name"
                app:counterMaxLength        ="20"
                app:errorEnabled            ="true"
                style                       ="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id              ="@+id/lastNameEditText"
                    android:layout_width    ="match_parent"
                    android:layout_height   ="wrap_content"
                    android:text            ='@{user.lastName}'
                    android:inputType       ="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width  ="match_parent"
                android:layout_height ="2dp"
                android:background    ="@color/colorPrimaryDark" />

            <TextView
                android:layout_width       ="wrap_content"
                android:layout_height      ="wrap_content"
                android:text               ="@string/phone_numbers"
                android:textSize           ="16sp"
                android:layout_marginTop   ="24dp"
                android:layout_marginStart ="8dp" />

            <LinearLayout
                android:id              ="@+id/phoneNumberLayout"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:orientation     ="vertical">

            <LinearLayout

                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:orientation     ="horizontal">

                <Spinner
                    android:id                  ="@+id/phoneNumberTypeSpinner"
                    android:layout_width        ="0dp"
                    android:layout_height       ="wrap_content"
                    android:entries             ="@array/different_number_types"
                    android:layout_marginTop    ="16dp"
                    android:layout_marginStart  ="16dp"
                    android:layout_weight       ="2"
                    tools:listitem              ="@android:layout/simple_spinner_item"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id                 ="@+id/phoneNumberTypeFieldLayout"
                    android:layout_height      ="wrap_content"
                    android:layout_width       ="0dp"
                    android:layout_marginTop   ="16dp"
                    android:layout_weight      ="3"
                    app:errorEnabled           ="true"
                    style                      ="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id             ="@+id/phoneNumberFieldEditText"
                        android:layout_height  ="wrap_content"
                        android:layout_width   ="match_parent"
                        android:textAlignment  ="center"
                        android:layout_weight  ="3"
                        android:inputType      ="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id                  ="@+id/insertPhoneNumberRow"
                    android:layout_width        ="wrap_content"
                    android:layout_height       ="wrap_content"
                    android:layout_marginStart  ="8dp"
                    android:layout_marginTop    ="24dp"
                    app:srcCompat               ="@drawable/ic_add_row" />

                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width        ="match_parent"
                android:layout_height       ="2dp"
                android:layout_marginTop    ="16dp"
                android:background          ="@color/colorPrimaryDark" />

            <TextView
                android:layout_width        ="wrap_content"
                android:layout_height       ="wrap_content"
                android:text                ="@string/email"
                android:textSize            ="16sp"
                android:layout_marginTop    ="24dp"
                android:layout_marginStart  ="8dp" />

            <LinearLayout
                android:id              ="@+id/emailLayout"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:orientation     ="vertical">

                    <LinearLayout
                        android:layout_width    ="match_parent"
                        android:layout_height   ="wrap_content"
                        android:orientation     ="horizontal">

                    <Spinner
                        android:id                  ="@+id/emailTypeSpinner"
                        android:layout_width        ="0dp"
                        android:layout_height       ="wrap_content"
                        android:entries             ="@array/different_number_types"
                        android:layout_marginTop    ="16dp"
                        android:layout_marginStart  ="16dp"
                        android:layout_weight       ="2"
                        tools:listitem              ="@android:layout/simple_spinner_item"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id                 ="@+id/emailTypeFieldLayout"
                        android:layout_height      ="wrap_content"
                        android:layout_width       ="0dp"
                        android:layout_marginTop   ="16dp"
                        android:layout_weight      ="3"
                        app:errorEnabled           ="true"
                        style                      ="@style/Rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id             ="@+id/emailFieldEditText"
                            android:layout_height  ="wrap_content"
                            android:layout_width   ="match_parent"
                            android:textAlignment  ="center"
                            android:layout_weight  ="3"
                            android:inputType      ="textEmailAddress"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id                  ="@+id/insertEmailRow"
                        android:layout_width        ="wrap_content"
                        android:layout_height       ="wrap_content"
                        android:layout_marginStart  ="8dp"
                        android:layout_marginTop    ="24dp"
                        app:srcCompat               ="@drawable/ic_add_row" />
                    </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width        ="match_parent"
                android:layout_height       ="2dp"
                android:layout_marginTop    ="16dp"
                android:background          ="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:orientation     ="horizontal">

                <Button
                    android:id                              ="@+id/cancelButton"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginLeft               ="16dp"
                    android:layout_marginRight              ="16dp"
                    android:layout_marginTop                ="16dp"
                    android:text                            ="@string/cancel"
                    android:layout_marginBottom             ="8dp"
                    android:layout_weight                   ="1" />

                <Button
                    android:id                              ="@+id/saveButton"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginLeft               ="16dp"
                    android:layout_marginTop                ="16dp"
                    android:layout_marginRight              ="16dp"
                    android:text                            ="@string/save"
                    android:layout_marginBottom             ="8dp"
                    android:layout_weight                   ="1" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
